log
Thu 09 May 2024 01:07:11 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
080dca8
Thu 09 May 2024 01:09:28 AM UTC: 
 treemap.c | 40 +++++++++++++++++++++++++++++++++++++---
 1 file changed, 37 insertions(+), 3 deletions(-)
 tests:  6|6
total_score: 15/70
454c9a1
Thu 09 May 2024 01:15:42 AM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  13|5
total_score: 25/70
6a67172
Thu 09 May 2024 01:18:16 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
42304eb
Thu 09 May 2024 01:30:40 AM UTC: 
 treemap.c | 40 +++++++++++++++++++++++++++++++++++++++-
 1 file changed, 39 insertions(+), 1 deletion(-)
 tests:  0|0
1e4a6d2
Thu 09 May 2024 01:36:22 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
10275ab
Thu 09 May 2024 01:36:53 AM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
c09cb91
Thu 09 May 2024 01:37:04 AM UTC: 
 treemap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|0
9c5a752
Thu 09 May 2024 01:37:43 AM UTC: 
 treemap.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 49 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:158:31: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
  158 |             node->pair->key = _strdup(min->pair->key);
      |                               ^~~~~~~
      |                               strdup
treemap.c:158:29: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  158 |             node->pair->key = _strdup(min->pair->key);
      |                             ^
treemap.c:159:31: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  159 |             node->pair->value = _strdup(min->pair->value);
      |                               ^
test.c: At top level:
test.c:6:8: error: conflicting types for ‘_strdup’; have ‘char *(const char *)’
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
treemap.c:158:31: note: previous implicit declaration of ‘_strdup’ with type ‘int()’
  158 |             node->pair->key = _strdup(min->pair->key);
      |                               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f2a2453
Thu 09 May 2024 01:37:52 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
49130c9
Thu 09 May 2024 01:38:03 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
cf3733c
Thu 09 May 2024 01:53:06 AM UTC: 
 treemap.c | 74 ++++++++++++++++++++++++++++++++-------------------------------
 1 file changed, 38 insertions(+), 36 deletions(-)
In file included from test.c:4:
treemap.c:142:6: error: redefinition of ‘removeNode’
  142 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c:94:6: note: previous definition of ‘removeNode’ with type ‘void(TreeMap *, TreeNode *)’
   94 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
Compilation failed
c35edf9
Thu 09 May 2024 01:53:16 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4462fa8
Thu 09 May 2024 01:53:44 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  15|4
total_score: 25/70
a3195db
Thu 09 May 2024 01:54:22 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
b18c995
Thu 09 May 2024 01:59:46 AM UTC: 
 treemap.c | 81 ++++++++++++++++++++++++++++++++++++++++-----------------------
 1 file changed, 52 insertions(+), 29 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:145:31: error: implicit declaration of function ‘findSuccessor’ [-Werror=implicit-function-declaration]
  145 |         TreeNode *successor = findSuccessor(current->right);
      |                               ^~~~~~~~~~~~~
treemap.c:145:31: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
40aa2ec
Thu 09 May 2024 02:00:03 AM UTC: 
 treemap.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  15|4
total_score: 25/70
d2d8fff
Thu 09 May 2024 02:06:26 AM UTC: 
 treemap.c | 70 ++++++++++++++++-----------------------------------------------
 1 file changed, 17 insertions(+), 53 deletions(-)
 tests:  20|3
total_score: 40/70
03b5343
Thu 09 May 2024 02:07:58 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 45/70
6bd6c06
Thu 09 May 2024 02:10:21 AM UTC: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  23|2
total_score: 45/70
b170725
Thu 09 May 2024 02:13:39 AM UTC: 
 treemap.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  26|1
total_score: 55/70
5e4bc29
